[metadata]
name = unmap
version = attr: unmap.__version__
author = Matt Hall
author_email = kwinkunks@gmail.com
description = Unmap data from pseudocolor images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kwinkunks/unmap
classifiers =
    Intended Audience :: Science/Research
    Development Status :: 3 - Alpha
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = unmap
python_requires = >=3.8
install_requires =
    numpy
    scipy
    xarray
    matplotlib

[options.extras_require]
test = pytest; pytest-cov
docs = sphinx; sphinxcontrib-apidoc; furo; myst_parser
dev = pytest; pytest-cov; sphinx; sphinxcontrib-apidoc; furo; myst_parser

[tool:pytest]
# pytest configuration: http://doc.pytest.org/en/latest/customize.html
addopts =
    --ignore=docs
    --cov=unmap

[coverage:run]
# coverage configuration: https://coverage.readthedocs.io/
omit =
    unmap/__init__.py
    unmap/_version.py
